--- a/pom.xml
+++ b/pom.xml
@@ -65,5 +65,6 @@
                 <version>3.3.2</version>
             </plugin>
         </plugins>
+        <finalName>lab3</finalName>
     </build>
 </project>
