start with lab, write three targets

--- a/build.properties
+++ b/build.properties
@@ -8,4 +8,4 @@ test=${src}/test
 path-to-packages=${main}/java/com/rsushe/weblab3
 out=./out
 web=${main}/webapp/WEB-INF/web.xml
-test_name=CheckAreaTest
+test_name=com.rsushe.weblab3.AreaHitCheckerTest
