--- a/ivy.xml
+++ b/ivy.xml
@@ -5,7 +5,7 @@
 
         <dependency org="javax.servlet" name="javax.servlet-api" rev="4.0.1"/>
 
-        <dependency org="org.hibernate" name="hibernate-core" rev="5.6.1.Final" />
+        <dependency org="org.hibernate" name="hibernate-core" rev="6.1.5.Final" />
 
         <!--        <dependency org="org.hibernate" name="hibernate-validator" rev="6.2.0.Final" />-->
 
@@ -16,6 +16,10 @@
         <dependency org="org.projectlombok" name="lombok" rev="1.18.24"/>
 
         <dependency org="junit" name="junit" rev="4.13.2"/>
+
+        <!-- https://mvnrepository.com/artifact/javax.media/jmf -->
+        <dependency org="javax.media" name="jmf" rev="2.1.1e"/>
+
 
         <!--        <dependency org="com.sun.xml.bind" name="jaxb-core" rev="2.3.0.1"/>-->
 
