--- a/build.properties
+++ b/build.properties
@@ -9,3 +9,5 @@ path-to-packages=${main}/java/com/rsushe/weblab3
 out=./out
 web=${main}/webapp/WEB-INF/web.xml
 test_name=com.rsushe.weblab3.AreaHitCheckerTest
+musicPlayer=afplay
+music=ben_yes.mp3
