--- a/.gitignore
+++ b/.gitignore
@@ -15,27 +15,8 @@ target/
 .idea/vcs.xml
 .idea/artifacts
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
+lib
+out
 
 ### Mac OS ###
 .DS_Store
