add all dao tests

--- a/build.properties
+++ b/build.properties
@@ -11,3 +11,4 @@ web=${main}/webapp/WEB-INF/web.xml
 test_name=com.rsushe.weblab3.AreaHitCheckerTest
 musicPlayer=afplay
 music=ben_yes.mp3
+classes=AreaHitChecker.java,HitChecker.java
